[fixbug] Visual overlap with the notification bar

--- a/css/notification.css
+++ b/css/notification.css
@@ -1,7 +1,7 @@
 notification-tool
 {
    width: 100%;
-   height: 15vh;
+   height: 5px;
    display : block;
    position : fixed;
    bottom: 0;
@@ -18,7 +18,7 @@ p.notification-teller__p
 
 div.notification-bar__div#active-notification
 {
-   top : 22%;
+   top : 108px;
    transition : .5s ease-in-out;
 }
 
